fix IE/Edge scrollbars in site menu

--- a/src/assets/scss/menus/panels/panel.globals.scss
+++ b/src/assets/scss/menus/panels/panel.globals.scss
@@ -27,6 +27,8 @@
 
         overflow: hidden;
 
+        -ms-overflow-style: none !important;
+
         @include font( $industry, 0.5625rem, 700 );
 
         @include color( white, 0.000 );
